--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+/* @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap'); */
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -120,3 +122,8 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+/* body {
+  font-family: 'Lato', sans-serif;
+} */
